--- a/week-two/html-css-test/styles.css
+++ b/week-two/html-css-test/styles.css
@@ -21,6 +21,7 @@ html {
   --gray-700: hsla(217, 23%, 27%, 1);
   --gray-900: hsla(221, 43%, 11%, 1);
   --gray-25: hsla(210, 20%, 99%, 1);
+  --gray-50: hsla(210, 24%, 98%, 1);
   --base-white: hsla(0, 0%, 100%, 1);
 }
 
@@ -132,12 +133,11 @@ html {
   max-width: 1440px;
   margin: 0 auto;
   padding: 50px 112px;
-  border: 1px solid green;
 }
 
 /* page header styles */
 .page-header {
-  border: 1px solid red;
+  margin-block-end: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -171,9 +171,64 @@ html {
   color: var(--base-white);
 }
 
+/* page filter styles */
+.page-filter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.page-filter__time {
+  display: flex;
+  padding-block: 16px;
+  border-radius: 8px;
+}
+
+.page-filter__item {
+  border: 1px solid var(--gray-300);
+  padding: 10px 16px;
+  font-size: 14px;
+  font-weight: 500;
+  background-color: var(--base-white);
+}
+
+.page-filter__item:first-child {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.page-filter__item:last-child {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.page-filter__item:hover {
+  background-color: var(--gray-50);
+  cursor: pointer;
+}
+
+.page-filter__buttons {
+  display: flex;
+  column-gap: 12px;
+}
+
+.button.dates {
+  color: var(--gray-500);
+}
+
+.button.filters {
+  color: var(--gray-700);
+}
+
 /* laptop styles */
 @media (max-width: 1280px) {
   /* header styles*/
+  .header__container,
+  .hero-container {
+    padding-inline: 16px;
+  }
+
   .header__nav,
   .header__icons {
     display: none;
@@ -191,10 +246,6 @@ html {
 /* tablet styles */
 @media (max-width: 768px) {
   /* header styles */
-  .header__container {
-    padding-inline: 16px;
-  }
-
   .header__button,
   .header__icons,
   .header__profile-picture {
@@ -214,6 +265,10 @@ html {
   .page-header__subtitle {
     font-size: 16px;
     padding-block-end: 16px;
+  }
+
+  /* page filter designs */
+  .page-filter__time {
   }
 }
 
