--- a/week-two/html-css-test/styles.css
+++ b/week-two/html-css-test/styles.css
@@ -14,6 +14,7 @@ html {
   --primary-50: hsla(264, 100%, 98%, 1);
   --primary-600: hsla(259, 63%, 59%, 1);
   --primary-700: hsla(258, 54%, 52%, 1);
+  --gray-200: hsla(220, 17%, 93%, 1);
   --gray-300: hsla(216, 16%, 84%, 1);
   --gray-400: hsla(218, 15%, 65%, 1);
   --gray-500: hsla(220, 13%, 46%, 1);
@@ -23,6 +24,8 @@ html {
   --gray-25: hsla(210, 20%, 99%, 1);
   --gray-50: hsla(210, 24%, 98%, 1);
   --base-white: hsla(0, 0%, 100%, 1);
+  --success-50: hsla(144, 83%, 96%, 1);
+  --success-700: hsla(155, 96%, 24%, 1);
 }
 
 /* global styles */
@@ -221,12 +224,84 @@ html {
   color: var(--gray-700);
 }
 
+/* account info styles */
+.account-info {
+  border: 1px solid black;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 24px;
+}
+
+.account-info__card {
+  border: 1px solid var(--gray-300);
+  border-radius: 8px;
+  background-color: var(--base-white);
+  padding: 24px;
+
+  display: flex;
+  column-gap: 24px;
+}
+
+.account-info__first-row,
+.account-info__second-row,
+.account-info__third-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.account-info__first-icon {
+  padding-inline-end: 8px;
+  align-self: flex-start;
+}
+
+.account-info__second-row {
+  align-items: center;
+}
+
+.account-info__text {
+  flex-grow: 1;
+}
+
+.account-info__title {
+  margin-block-end: 24px;
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--gray-900);
+}
+
+.account-info__subtitle {
+  margin-block-end: 8px;
+  font-size: 14px;
+  color: var(--gray-500);
+  font-weight: 500px;
+}
+
+.account-info__balance {
+  font-size: 30px;
+  font-weight: 600;
+  color: var(--gray-900);
+}
+
+.account-info__growth {
+  border-radius: 16px;
+  padding: 2px 8px;
+  background-color: var(--success-50);
+  color: var(--success-700);
+  align-self: flex-end;
+}
+
+.account-info__second-icon {
+  display: none;
+}
+
 /* laptop styles */
 @media (max-width: 1280px) {
   /* header styles*/
   .header__container,
   .hero-container {
-    padding-inline: 16px;
+    padding-inline: 64px;
   }
 
   .header__nav,
@@ -241,11 +316,21 @@ html {
   .header__right {
     column-gap: 30px;
   }
+  /* account info styles */
+  .account-info__card {
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
 
 /* tablet styles */
 @media (max-width: 768px) {
   /* header styles */
+  .header__container,
+  .hero-container {
+    padding-inline: 16px;
+  }
+
   .header__button,
   .header__icons,
   .header__profile-picture {
@@ -268,7 +353,21 @@ html {
   }
 
   /* page filter designs */
-  .page-filter__time {
+  /* account info styles */
+  .account-info {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 0;
+    row-gap: 20px;
+  }
+
+  .account-info__first-row {
+    display: none;
+  }
+
+  .account-info__second-icon {
+    display: block;
+    padding-inline-end: 8px;
   }
 }
 
