--- a/week-two/html-css-test/styles.css
+++ b/week-two/html-css-test/styles.css
@@ -226,18 +226,18 @@ html {
 
 /* account info styles */
 .account-info {
-  border: 1px solid black;
-
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 24px;
 }
 
 .account-info__card {
-  border: 1px solid var(--gray-300);
+  border: 1px solid var(--gray-200);
   border-radius: 8px;
   background-color: var(--base-white);
   padding: 24px;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1),
+    0px 1px 2px rgba(16, 24, 40, 0.06);
 
   display: flex;
   column-gap: 24px;
