--- a/week-two/html-css-test/styles.css
+++ b/week-two/html-css-test/styles.css
@@ -12,8 +12,13 @@ html {
 
 :root {
   --primary-50: hsla(264, 100%, 98%, 1);
+  --primary-100: hsla(267, 100%, 96%, 1);
+  --primary-300: hsla(265, 89%, 86%, 1);
+  --primary-400: hsla(262, 85%, 77%, 1);
+  --primary-500: hsla(260, 77%, 70%, 1);
   --primary-600: hsla(259, 63%, 59%, 1);
   --primary-700: hsla(258, 54%, 52%, 1);
+  --gray-100: hsla(220, 22%, 96%, 1);
   --gray-200: hsla(220, 17%, 93%, 1);
   --gray-300: hsla(216, 16%, 84%, 1);
   --gray-400: hsla(218, 15%, 65%, 1);
@@ -24,9 +29,6 @@ html {
   --gray-25: hsla(210, 20%, 99%, 1);
   --gray-50: hsla(210, 24%, 98%, 1);
   --base-white: hsla(0, 0%, 100%, 1);
-  --success-50: hsla(144, 83%, 96%, 1);
-  --succes-600: hsla(153, 96%, 30%, 1);
-  --success-700: hsla(155, 96%, 24%, 1);
 }
 
 /* global styles */
@@ -226,6 +228,45 @@ html {
 }
 
 /* account info styles */
+.gradient {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.inner-circle {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+
+  background: hsla(0, 0%, 100%, 1);
+}
+
+.gradient.left {
+  background: conic-gradient(
+    var(--primary-600) 20%,
+    var(--primary-500) 20% 60%,
+    var(--primary-400) 60% 70%,
+    var(--primary-300) 70% 80%,
+    var(--primary-100) 80% 100%
+  );
+}
+
+.gradient.right {
+  background: conic-gradient(
+    var(--gray-600) 20%,
+    var(--gray-500) 20% 60%,
+    var(--gray-400) 60% 70%,
+    var(--gray-300) 70% 80%,
+    var(--gray-100) 80% 100%
+  );
+}
+
 .account-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -336,6 +377,28 @@ html {
   justify-content: space-between;
 }
 
+.data-chart {
+  max-width: 100%;
+  background-image: url("assets/images/straight-lines.png");
+}
+
+.month__container {
+  padding-inline: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.month__item {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--gray-500);
+}
+
+.mobile-chart {
+  display: none;
+}
+
 .main-container__title {
   font-size: 18px;
   font-weight: 500;
@@ -344,10 +407,6 @@ html {
 
 .main-container__logo {
   cursor: pointer;
-}
-
-.main-container__image {
-  max-width: 100%;
 }
 
 .main-container__row {
@@ -496,5 +555,34 @@ html {
     display: block;
     padding-inline-end: 8px;
     align-self: flex-start;
+  }
+
+  .desktop-chart {
+    display: none;
+  }
+
+  .mobile-chart {
+    display: block;
+  }
+
+  .data-chart-mobile {
+    background-image: url("assets/images/straight-lines.png");
+  }
+
+  .month__container-mobile {
+    padding-inline: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .month__item-mobile {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--gray-500);
+  }
+
+  .main-container__card {
+    padding: 20px 16px;
   }
 }
