--- a/week-two/html-css-test/styles.css
+++ b/week-two/html-css-test/styles.css
@@ -30,6 +30,9 @@ html {
   --gray-50: hsla(210, 24%, 98%, 1);
   --base-white: hsla(0, 0%, 100%, 1);
   --salmon-color: hsla(15, 62%, 89%, 1);
+  --success-50: hsla(144, 83%, 96%, 1);
+  --success-600: hsla(153, 96%, 30%, 1);
+  --success-700: hsla(155, 96%, 24%, 1);
 }
 
 /* global styles */
@@ -429,7 +432,7 @@ html {
 }
 
 .row__deposit {
-  color: var(--succes-600);
+  color: var(--success-600);
   font-weight: 400;
   font-size: 14px;
 }
